# rust-lambda-test

./: Cargo.toml
.github/workflows/: ci.yml
src/: main.rs
